added hello.html once again

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,46 @@
 
 <body>
     Hellow world;
+    <h1>H1 TAG</h1>
+    <h2>H2 TAG</h2>
+    <h3>H3 TAG</h3>
+    <h4>H4 TAG</h4>
+    <h5>H5 TAG</h5>
+    <h6>H6 TAG</h6>
+
+    An unoderd list
+    <ul>
+        <li>one item</li>
+        <li>two item</li>
+        <li>three item</li>
+    </ul>
+
+    An oderd list
+    <ol>
+        <li>one item</li>
+        <li>two item</li>
+        <li>three item</li>
+    </ol>
+    <img src="cat.jpg" height="100" width="100">
+
+    <table>
+        <tr>
+            <th>First name </th>
+            <th>middle name </th>
+            <th>Last name </th>
+        </tr>
+        <tr>
+            <td>RISHI </td>
+            <td>NA</td>
+            <td>AGRAWAL</td>
+        </tr>
+    </table>
+    <form>
+        <input type="text" placeholder="Full name" name="name">
+        <button>SUBMIT</button>
+    </form>
+
+
 </body>
 
 </html>
